# notification-hub

./: Cargo.toml  diesel.toml
src/: lib.rs  main.rs
src/adapters/api/shared/: app_state.rs  error_presenter.rs  mod.rs
src/adapters/spi/: mod.rs
src/adapters/spi/db/: db_connection.rs  db_mappers.rs  db_notification_repository.rs  mod.rs  models.rs  schema.rs
src/adapters/spi/http/: http_connection.rs  mod.rs
src/application/: mod.rs
src/application/mappers/: api_mapper.rs  db_mapper.rs  http_mapper.rs  mod.rs
src/application/repositories/: mod.rs  notification_repository_abstract.rs
src/domain/: error.rs  identity_entity.rs  mod.rs  notification_entity.rs
src/infrastructure/: mod.rs
