[package]
name = "notification-hub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html




[dependencies]
axum = "0.7.5"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
hyper = "1.3.1"
actix-web = {version = "4"}
actix-rt = "~2.7"
log = "~0.4.0"
